--- a/myproject/frontend/src/App.css
+++ b/myproject/frontend/src/App.css
@@ -57,3 +57,21 @@
     border: none;
     background-color: rgba(255, 255, 255, 1);
 }
+
+table {
+    width: 100%;
+    border-collapse: collapse;
+}
+
+table, th, td {
+    border: 1px solid #6a97eb;
+}
+
+th, td {
+    padding: 8px;
+    text-align: left;
+}
+
+th {
+    background-color: #4ba179;
+}
